fix(ai-help): nav and sidebar overlap on mobile (#474)
caused by conflicts between variables in our legacy css, and in fred's css: so rename --top-nav-height to --navigation-height

--- a/components/about-tabs/element.css
+++ b/components/about-tabs/element.css
@@ -6,7 +6,7 @@
 
 .tablist-wrapper {
   position: sticky;
-  top: var(--top-nav-height);
+  top: var(--sticky-header-height);
   z-index: 2;
 
   padding: 0 var(--center-padding);
